samples/_failures_safe/1761221538_a24c3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be0b5675.c: In function ‘handle_event’:
./samples/SAFE/__tmp_be0b5675.c:154:17: error: expected expression at end of input
  154 |                 if (
      |                 ^~
./samples/SAFE/__tmp_be0b5675.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be0b5675.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be0b5675.c:154:17: error: expected declaration or statement at end of input
